@@ -5,4 +5,4 @@ use warnings;
 use Hailo::Test;
 use Test::More;
 
-Hailo::Test->new( storage => 'mysql' )->test_all_plan('known');
+Hailo::Test->new( storage => 'mysql' )->test_all_plan;
